# ris-ranking-poc

./: .gitignore  README.md  gradiant.py  main.py  pyproject.toml  randomforest.py  scored_medical_claims.csv
data/: scored_medical_claims.csv  synthesized_medical_claims.csv
