[tool.poetry]
name = "ris-ranking-poc"
version = "0.1.0"
description = ""
authors = ["Wade Wright <wwright@besler.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.3"
numpy = "^2.1.2"
scikit-learn = "^1.5.2"
matplotlib = "^3.9.2"
rich = "^13.9.4"
loguru = "^0.7.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
